#5 add get projects and create project
