# docs/swagger.yaml
@@ -21,6 +21,20 @@ definitions:
     required:
     - id
     type: object
+  delivery.CreateProjectIn:
+    properties:
+      name:
+        type: string
+    required:
+    - name
+    type: object
+  delivery.CreateProjectOut:
+    properties:
+      id:
+        type: integer
+    required:
+    - id
+    type: object
   delivery.EntryOut:
     properties:
       id:
@@ -32,6 +46,13 @@ definitions:
       time_end:
         type: string
       time_start:
+        type: string
+    type: object
+  delivery.ProjectOut:
+    properties:
+      id:
+        type: integer
+      name:
         type: string
     type: object
   echo.HTTPError:
@@ -109,4 +130,63 @@ paths:
       summary: Get my entries.
       tags:
       - entries
+  /me/projects:
+    get:
+      consumes:
+      - application/json
+      description: Get my projects or get my projects for a day
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success create project
+          schema:
+            items:
+              $ref: '#/definitions/delivery.ProjectOut'
+            type: array
+        "400":
+          description: bad request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Get my projects.
+      tags:
+      - projects
+  /projects/create:
+    post:
+      consumes:
+      - application/json
+      description: Create project.
+      parameters:
+      - description: project info
+        in: body
+        name: project
+        required: true
+        schema:
+          $ref: '#/definitions/delivery.CreateProjectIn'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: success create project
+          schema:
+            $ref: '#/definitions/delivery.CreateProjectOut'
+        "400":
+          description: bad request
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "422":
+          description: unprocessable entity
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+        "500":
+          description: internal server error
+          schema:
+            $ref: '#/definitions/echo.HTTPError'
+      summary: Create project.
+      tags:
+      - projects
 swagger: "2.0"
